@@ -384,3 +384,4 @@ v0.73.3:
     - Config and english yml's are now written as UTF-8 encoded to allow for easy editing with foreign characters.
     - Added a depends entry to the config.yml to prevent world.txt corruption if Towny loads before Multiverse.
     - Added a white suffix to town and nation chat to fix a compatability issue with herochat.
+    - Added getTownName and isWilderness functions to the Towny API (inherit ca.xshade.bukkit.towny.Towny)
